--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Nick's Github-hosted website</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="#">About</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Nick!</h1>
-				<p>I'm the Digital Initiatives Librarian at <a href="https://libraries.indiana.edu">Indiana University</a>, and this is a scratchpad for basic website stuff.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<div class="container">
-			<h1>Timeline</h1>
-			<p>Here is my timeline which I have embedded using an iframe.</p>
-			<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=14oeUonTxPoHDJQD5md5Ir3TtozcDs8wdurWWtd25SV8&font=Fjalla-Average&lang=en&initial_zoom=1&height=650' width='100%' height='800' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
-
-		</div>
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/nhomenda">github.com/nhomenda</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Nick's Github-hosted website
+---
+<div class="blurb">
+	<h1>Hi there, I'm Nick!</h1>
+	<p>I'm the Digital Initiatives Librarian at <a href="https://libraries.indiana.edu">Indiana University</a>, and this is a scratchpad for basic website stuff.</p>
+</div><!-- /.blurb -->
+<div class="blurb">
+	<h1>Timeline</h1>
+	<p>Here is my timeline which I have embedded using an iframe.</p>
+	<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=14oeUonTxPoHDJQD5md5Ir3TtozcDs8wdurWWtd25SV8&font=Fjalla-Average&lang=en&initial_zoom=1&height=650' width='100%' height='800' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+</div><!-- /.blurb -->
