--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: About
+---
+<div class="blurb">
+	<h1>About this site</h1>
+	<p>I set up this site to show lightweight web tools, beginning with <a href="https://timeline.knightlab.com/">TimelineJS</a>.</p>
+</div><!-- /.blurb -->
