--- a/dom.html
+++ b/dom.html
@@ -9,7 +9,7 @@
         parser = new DOMParser();
         xmlDoc = parser.parseFromString(xml, "text/xml");
     function citeFunction() {
-        document.getElementById("demo").innerHTML = xmlDoc.getElementsByTagName("author")[0].childNodes[0].nodeValue;       
+        document.getElementById("demo").innerHTML = "Hello World!";       
     }
     </script>
 </head>
