--- a/dom.html
+++ b/dom.html
@@ -5,7 +5,7 @@
     <title>Business Card DOM Example 1</title>
     <script type="text/javascript">
     function citeFunction() {
-        document.getElementById("demo").innerHTML = "Hello World!";       
+        document.getElementsByTagName("author")[0].childNodes[0].nodeValue;       
     }
     </script>
 </head>
