--- a/dom.html
+++ b/dom.html
@@ -4,8 +4,12 @@
 <head>
     <title>Business Card DOM Example 1</title>
     <script type="text/javascript">
+        var parser, xmlDoc;
+        var xml = document.getElementByID("xmldata1").innerHTML; 
+        parser = new DOMParser();
+        xmlDoc = parser.parseFromString(xml, "text/xml");      
     function citeFunction() {
-        document.getElementsByTagName("author")[0].childNodes[0].nodeValue;       
+        document.getElementByID("demo").innerHTML = xmlDoc.getElementsByTagName("title")[0].childNodes[0].nodeValue;       
     }
     </script>
 </head>
