--- a/teaching/index.html
+++ b/teaching/index.html
@@ -5,6 +5,6 @@ title: Teaching
 <div class="blurb">
 	<h1>Teaching</h1>
 	<p>This is where you will find resources for various courses and workshops that I teach.</p>
-  <p><a href="/teaching/Z656/index.html">ILS-Z656</a></p>
+  <p><a href="/teaching/Z656/index.md">ILS-Z656</a></p>
   <p>EAD Workshop: <b>TBD</b></p>
 </div><!-- /.blurb -->
