--- a/Z656/index.html
+++ b/Z656/index.html
@@ -5,7 +5,7 @@ title: ILS-Z656
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
 
-	  {% for assignment in site.assignmentss %}
+	  {% for assignment in site.assignments %}
 	    <li><span>{{ assignment.date | date_to_string }}</span> » <a href="{{ assignment.url }}" title="{{ assignment.title }}">{{ assignment.title }}</a></li>
 	  {% endfor %}
 	</ul>
