--- a/about/index.html
+++ b/about/index.html
@@ -5,4 +5,5 @@ title: About
 <div class="blurb">
 	<h1>About this site</h1>
 	<p>I set up this site to show lightweight web tools, beginning with <a href="https://timeline.knightlab.com/">TimelineJS</a>.</p>
+	<p>I also use this site to host resources for classes and workshops I teach.</p>
 </div><!-- /.blurb -->
