--- a/Z656/index.html
+++ b/Z656/index.html
@@ -5,7 +5,7 @@ title: ILS-Z656
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
 
-	  {% for assignment in site.assignments %}
-	    <li><span>{{ assignment.date | date_to_string }}</span> » <a href="{{ assignment.url }}" title="{{ assignment.title }}">{{ assignment.title }}</a></li>
-	  {% endfor %}
+	
+	    <li>2018-01-11 » <a href="/_assignments/2017-01-11-well-formed-XML.md" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
+	 
 	</ul>
