--- a/Z656/well-formed-XML.html
+++ b/Z656/well-formed-XML.html
@@ -8,7 +8,7 @@ date: 2018-01-11
 <div class="blurb">
 <p>Using elements and attributes, create well-formed XML documents to represent and describe the documents and data below:<p>
 <ul>
-  <li><a href="http://info.ils.indiana.edu/~jawalsh/teaching/z656/2015s/labs/well-formed_lab/images/hulk_114.jpg">comic book cover</a</li>
+  <li><a href="http://info.ils.indiana.edu/~jawalsh/teaching/z656/2015s/labs/well-formed_lab/images/hulk_114.jpg">comic book cover</a></li>
 </ul>
 
 <p>Design meaningful tags (elements and attributes) to describe the content of these documents. Try to balance the generality and specificity of what you encode.</p>
