--- a/Z656/well-formed-XML.html
+++ b/Z656/well-formed-XML.html
@@ -14,6 +14,5 @@ date: 2018-01-11
 <p>Design meaningful tags (elements and attributes) to describe the content of these documents. Try to balance the generality and specificity of what you encode.</p>
 <p>You should <b>not</b> use an existing XML schema or markup language; please invent your own!</p>
 
-<p>Upload the three XML files to your GitHub Pages site within a directory that you will use for most of your assignments for the class</p> 
-<p>Please submit a link to that directory on Canvas.</p>
+<p>Upload the three XML files to your GitHub Pages site within a subdirectory, and please submit a link to that subdirectory via Canvas.</p>
 </div><!-- /.blurb -->
