--- a/Z656/github-pages.html
+++ b/Z656/github-pages.html
@@ -10,7 +10,7 @@ date: 2018-01-11
 <pre class="prettyprint pre-scrollable"><code>&lt;!DOCTYPE html&gt;
 &lt;html&gt;
 	&lt;head&gt;
-		&lt;title&gt;Hank Quinlan, Horrible Cop&lt;/title&gt;
+		&lt;title&gt;NAME, Digital Publishing Expert&lt;/title&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
 		&lt;nav&gt;
@@ -23,14 +23,14 @@ date: 2018-01-11
 		&lt;/nav&gt;
 		&lt;div class="container"&gt;
     		&lt;div class="blurb"&gt;
-        		&lt;h1&gt;Hi there, I'm Hank Quinlan!&lt;/h1&gt;
-				&lt;p&gt;I'm best known as the horrible cop from &lt;em&gt;A Touch of Evil&lt;/em&gt; Don't trust me. &lt;a href="/about"&gt;Read more about my life...&lt;/a&gt;&lt;/p&gt;
+        		&lt;h1&gt;Hi there, I'm NAME!&lt;/h1&gt;
+				&lt;p&gt;Here's a blurb about me and my site!&lt;/p&gt;
     		&lt;/div&gt;&lt;!-- /.blurb --&gt;
 		&lt;/div&gt;&lt;!-- /.container --&gt;
 		&lt;footer&gt;
     		&lt;ul&gt;
-        		&lt;li&gt;&lt;a href="mailto:hankquinlanhub@gmail.com"&gt;email&lt;/a&gt;&lt;/li&gt;
-        		&lt;li&gt;&lt;a href="https://github.com/hankquinlan"&gt;github.com/hankquinlan&lt;/a&gt;&lt;/li&gt;
+        		&lt;li&gt;&lt;a href="mailto:your-email@gmail.com"&gt;email&lt;/a&gt;&lt;/li&gt;
+        		&lt;li&gt;&lt;a href="https://github.com/NAME"&gt;github.com/NAME&lt;/a&gt;&lt;/li&gt;
 			&lt;/ul&gt;
 		&lt;/footer&gt;
 	&lt;/body&gt;
@@ -107,8 +107,8 @@ ul.posts li &lbrace;
 			&lt;/div&gt;&lt;!-- /.container --&gt;
 			&lt;footer&gt;
 	    		&lt;ul&gt;
-	        		&lt;li&gt;&lt;a href="mailto:hankquinlanhub@gmail.com"&gt;email&lt;/a&gt;&lt;/li&gt;
-	        		&lt;li&gt;&lt;a href="https://github.com/hankquinlan"&gt;github.com/hankquinlan&lt;/a&gt;&lt;/li&gt;
+	        		&lt;li&gt;&lt;a href="mailto:your-email@gmail.com"&gt;email&lt;/a&gt;&lt;/li&gt;
+	        		&lt;li&gt;&lt;a href="https://github.com/NAME"&gt;github.com/NAME&lt;/a&gt;&lt;/li&gt;
 				&lt;/ul&gt;
 			&lt;/footer&gt;
 		&lt;/body&gt;
@@ -116,11 +116,11 @@ ul.posts li &lbrace;
 	<p>Snippet 4: New <code>index.html</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: NAME, Digital Publishing Expert
 ---
 &lt;div class="blurb"&gt;
-	&lt;h1&gt;Hi there, I'm Hank Quinlan!&lt;/h1&gt;
-	&lt;p&gt;I'm best known as the horrible cop from &lt;em&gt;A Touch of Evil&lt;/em&gt; Don't trust me. &lt;a href="/about"&gt;Read more about my life...&lt;/a&gt;&lt;/p&gt;
+	&lt;h1&gt;Hi there, I'm NAME!&lt;/h1&gt;
+	&lt;p&gt;Here's a blurb about me and my site!&lt;/p&gt;
 &lt;/div&gt;&lt;!-- /.blurb --&gt;</code></pre>
 	
 	<p>Snippet 5: <code>post.html</code></p>
@@ -137,7 +137,7 @@ layout: default
 	<p>Snippet 6: <code>2018-01-10-my-site-launched.md</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: post
-title: "Hank Quinlan, Horrible Cop, Launches Site"
+title: "NAME, Digital Publishing Expert, launches site"
 date: 2014-04-30
 ---
 
@@ -145,7 +145,7 @@ Well. Finally got around to putting this old website together. Neat thing about 
 	<p>Snippet 6: <code>blog/index.html</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: default
-title: Hank Quinlan's Blog
+title: NAME's Blog
 ---
 	&lt;h1&gt;&lbrace;&lbrace; page.title &rbrace;&rbrace;&lt;/h1&gt;
 	&lt;ul class="posts"&gt;
@@ -162,22 +162,22 @@ layout: feed
 &lt;?xml version="1.0" encoding="utf-8"?&gt;
 &lt;feed xmlns="http://www.w3.org/2005/Atom"&gt;
 
-	&lt;title&gt;Hank Quinlan's Blog&lt;/title&gt;
-	&lt;link href="http://hankquinlan.github.io/blog/atom.xml" rel="self"/&gt;
-	&lt;link href="http://hankquinlan.github.io/blog"/&gt;
+	&lt;title&gt;NAMEn's Blog&lt;/title&gt;
+	&lt;link href="http://NAME.github.io/blog/atom.xml" rel="self"/&gt;
+	&lt;link href="http://NAME.github.io/blog"/&gt;
 	&lt;updated&gt;&lbrace;&lbrace; site.time | date_to_xmlschema &rbrace;&rbrace;&lt;/updated&gt;
-	&lt;id&gt;http://hankquinlan.github.io/blog&lt;/id&gt;
+	&lt;id&gt;http://NAME.github.io/blog&lt;/id&gt;
 	&lt;author&gt;
-		&lt;name&gt;Hank Quinlan&lt;/name&gt;
-		&lt;email&gt;hankquinlanhub@gmail.com&lt;/email&gt;
+		&lt;name&gt;NAME&lt;/name&gt;
+		&lt;email&gt;your-email@gmail.com&lt;/email&gt;
 	&lt;/author&gt;
 
 	&lbrace;&percnt; for post in site.posts &percnt;&rbrace;
 		&lt;entry&gt;
 			&lt;title&gt;&lbrace;&lbrace; post.title &rbrace;&rbrace;&lt;/title&gt;
-			&lt;link href="http://hankquinlan.github.io&lbrace;&lbrace; post.url &rbrace;&rbrace;"/&gt;
+			&lt;link href="http://NAME.github.io&lbrace;&lbrace; post.url &rbrace;&rbrace;"/&gt;
 			&lt;updated&gt;&lbrace;&lbrace; post.date | date_to_xmlschema &rbrace;&rbrace;&lt;/updated&gt;
-			&lt;id&gt;http://hankquinlan.github.io&lbrace;&lbrace; post.id &rbrace;&rbrace;&lt;/id&gt;
+			&lt;id&gt;http://NAME.github.io&lbrace;&lbrace; post.id &rbrace;&rbrace;&lt;/id&gt;
 			&lt;content type="html"&gt;&lbrace;&lbrace; post.content | xml_escape &rbrace;&rbrace;&lt;/content&gt;
 		&lt;/entry&gt;
 	&lbrace;&percnt; endfor &percnt;&rbrace;
