--- a/Z656/github-pages.html
+++ b/Z656/github-pages.html
@@ -116,7 +116,7 @@ ul.posts li &lbrace;
 	<p>Snippet 4: New <code>index.html</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: default
-title: NAME, Digital Publishing Expert
+title: "NAME, Digital Publishing Expert"
 ---
 &lt;div class="blurb"&gt;
 	&lt;h1&gt;Hi there, I'm NAME!&lt;/h1&gt;
@@ -145,7 +145,7 @@ Well. Finally got around to putting this old website together. Neat thing about 
 	<p>Snippet 6: <code>blog/index.html</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: default
-title: NAME's Blog
+title: "NAME's Blog"
 ---
 	&lt;h1&gt;&lbrace;&lbrace; page.title &rbrace;&rbrace;&lt;/h1&gt;
 	&lt;ul class="posts"&gt;
