--- a/Z656/github-pages.html
+++ b/Z656/github-pages.html
@@ -162,7 +162,7 @@ layout: feed
 &lt;?xml version="1.0" encoding="utf-8"?&gt;
 &lt;feed xmlns="http://www.w3.org/2005/Atom"&gt;
 
-	&lt;title&gt;NAMEn's Blog&lt;/title&gt;
+	&lt;title&gt;NAME's Blog&lt;/title&gt;
 	&lt;link href="http://NAME.github.io/blog/atom.xml" rel="self"/&gt;
 	&lt;link href="http://NAME.github.io/blog"/&gt;
 	&lt;updated&gt;&lbrace;&lbrace; site.time | date_to_xmlschema &rbrace;&rbrace;&lt;/updated&gt;
