--- a/Z656/index.html
+++ b/Z656/index.html
@@ -4,8 +4,7 @@ title: ILS-Z656
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
-
-	
+	    <li>2018-01-11 » <a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
 	    <li>2018-01-11 » <a href="/Z656/well-formed-XML.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
-	 
 	</ul>
+	
