--- a/Z656/github-pages.html
+++ b/Z656/github-pages.html
@@ -138,10 +138,10 @@ layout: default
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: post
 title: "NAME, Digital Publishing Expert, launches site"
-date: 2014-04-30
+date: 2018-01-10
 ---
 
-Well. Finally got around to putting this old website together. Neat thing about it - powered by &lbrack;Jekyll&rbrack;&lpar;http://jekyllrb.com&rpar; and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.</code></pre>
+I finally got around to putting this old website together. Neat thing about it - powered by &lbrack;Jekyll&rbrack;&lpar;http://jekyllrb.com&rpar; and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.</code></pre>
 	<p>Snippet 6: <code>blog/index.html</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: default
@@ -155,7 +155,7 @@ title: "NAME's Blog"
 	  &lbrace;&percnt; endfor &percnt;&rbrace;
 	&lt;/ul&gt;</code></pre>
 	
-	<p>Snippet 7: <code>atom.xml</code></p>
+	<p>Snippet 7: <code>blog/atom.xml</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: feed
 ---
