--- a/Z656/xmlcss.html
+++ b/Z656/xmlcss.html
@@ -8,5 +8,5 @@ date: 2018-01-17
 <div class="blurb">
 <p>Write CSS to style this <a href="https://nhomenda.github.io/Z656/titlepage.xml">XML code</a> to look as close as possible to the printed page shown below. Be sure to use a free custom font that you can download from <a href="https://www.fontsquirrel.com/">Font Squirrel</a> or somewhere else.<p>
 <p>Upload the source XML file, CSS stylesheet, and any necessary assets to your GitHub Pages site within a subdirectory. Please submit a link to that subdirectory via Canvas.</p>
-<img href="http://info.ils.indiana.edu/~jawalsh/teaching/z656/2015s/labs/xml_css/eg/titlePage.jpg" />
+<img src="http://info.ils.indiana.edu/~jawalsh/teaching/z656/2015s/labs/xml_css/eg/titlePage.jpg" />
 </div><!-- /.blurb -->
