--- a/Z656/index.html
+++ b/Z656/index.html
@@ -4,6 +4,8 @@ title: ILS-Z656
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
+	    <li>2018-01-25 » <a href="/Z656/dtd-schema.html" title="DTDs and Schemas">DTDs and Schemas (in-class)</a></li>	
+	    <li>2018-01-25 » <a href="/Z656/create-dtd-schema.html" title="Create a DTD and a Schema">Create a DTD and a Schema</a></li>
 	    <li>2018-01-18 » <a href="/Z656/XMLreview.html" title="XML Review">XML Review</a></li>
 	    <li>2018-01-18 » <a href="/Z656/petrockrescue.html" title="CSS Review">CSS Review</a></li>
 	    <li>2018-01-18 » <a href="/Z656/xmlcss.html" title="Styling XML documents with CSS">Styling XML documents with CSS</a></li>
