--- a/Z656/XSLT1.html
+++ b/Z656/XSLT1.html
@@ -6,7 +6,7 @@ date: 2018-02-08
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-  <p>First, have a look at <a href="https://docs.google.com/spreadsheets/d/1wMQRf-bkFvNMgNMs7KaoVR717r5zRqlQoErqIc67scI/edit?usp=sharing">midterm presentation topics</a>. Sign up for your topic when you get the chance.</p>
+  <p>First, have a look at . Sign up for your topic when you get the chance.</p>
   <p>Next, we'll revist <a href="https://nhomenda.github.io/Z656/DisneyWorld.xml">Disney World</a> to learn more about XSLT.</p>
   <p>Finally, we'll work on a <a href="http://purl.dlib.indiana.edu/iudl/general/mets/VAA2127">more complex XML document</a>.</p>
 
