--- a/Z656/XSLT1.html
+++ b/Z656/XSLT1.html
@@ -7,7 +7,7 @@ date: 2018-02-08
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>First, have a look at . Sign up for your topic when you get the chance.</p>
-  <p>Next, we'll revist <a href="https://nhomenda.github.io/Z656/DisneyWorld.xml">Disney World</a> to learn more about XSLT.</p>
+  <p>Next, we'll revist <a href="DisneyWorld.xml">Disney World</a> to learn more about XSLT.</p>
   <p>Finally, we'll work on a <a href="http://purl.dlib.indiana.edu/iudl/general/mets/VAA2127">more complex XML document</a>.</p>
 
 </div><!-- /.blurb -->
