--- a/Z656/XSLT2.html
+++ b/Z656/XSLT2.html
@@ -8,6 +8,6 @@ date: 2018-02-15
 <div class="blurb">
   <p>First, let's review basic XSLT transformations with <a href="neko.xml">this XML</a>.</p>
   <p>Next, we'll create new HTML output with some more pair programming!</p>
-  <p>Finally, we'll work on a <a href="#">more complex XML document</a>.</p>
+  <p>Finally, we'll work on a <a href="xslttips.xml">more complex XML document</a>.</p>
 
 </div><!-- /.blurb -->
