--- a/Z656/index.html
+++ b/Z656/index.html
@@ -4,6 +4,8 @@ title: ILS-Z656
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
+	    <li>2018-02-22 » <a href="/Z656/XSLT3.html" title="XSLT Class 3">XSLT In-Class Exercises 3</a></li> 
+	    <li>2018-02-22 » <a href="/Z656/xslt-hw3.html" title="XSLT Homework 3">XSLT Homework 3</a></li> 
 	    <li>2018-02-15 » <a href="/Z656/XSLT2.html" title="XSLT Class 2">XSLT In-Class Exercises 2</a></li> 
 	    <li>2018-02-15 » <a href="/Z656/xslt-hw2.html" title="XSLT Homework 2">XSLT Homework 2</a></li> 
 	    <li>2018-02-08 » <a href="/Z656/XSLT1.html" title="XSLT Class 1">XSLT In-Class Exercises 1</a></li> 
