--- a/Z656/XSLT3.html
+++ b/Z656/XSLT3.html
@@ -7,6 +7,7 @@ date: 2018-02-22
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>First, let's review last week's XSLT concepts with <a href="neko_cats.xml">this XML</a> again.</p>
+  <p>Here's <a href="https://www.w3.org/TR/xslt20/#date-time-examples">a resource</a> that we'll use today.</p>
   <p>Next, we'll solve a real-world problem using this <a href="dc-rdf.xml">source XML</a>, <a href="output.xml">expected output</a>, and an <a href="help.xsl">XSLT to diagnose</a>.</p>
   <p>Finally, we'll work on a <a href="xslttips.html">more complex XML document</a> again, covering modes.</p>
 
