--- a/Z656/xslt-hw2.html
+++ b/Z656/xslt-hw2.html
@@ -14,6 +14,6 @@ date: 2018-02-15
 <li>A variable that contains a concatenation of relevant game information, to be used more than once in your HTML</li>
 <li>Sorting based on some metadata about individual players: batting average, last name, jersey number, etc.</li>
 </ol>
-<p>Make your HTML file link to the CSS stylesheet you developed for your GitHub Pages site and host the HTML and XSLT on GitHub in a subdirectory. Feel free to make adjustments to your GitHub Pages CSS as you see fit. Please sumbit a link to this subdirectory in Canvas.</p>
+<p>Make your HTML file link to the CSS stylesheet you developed for your GitHub Pages site and host the HTML and XSLT on GitHub in a subdirectory. Feel free to make adjustments to your GitHub Pages CSS as you see fit. Please submit a link to this subdirectory in Canvas.</p>
 
 </div><!-- /.blurb -->
