--- a/Z656/XSLT4.html
+++ b/Z656/XSLT4.html
@@ -6,7 +6,7 @@ date: 2018-03-01
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-  <p>First, Baseball Show and Tell!</p>
+  <p>First, <a href="baseball.xsl">Baseball</a> Show and Tell!</p>
   <p>Next, we'll do some quick result-document practice with <a href="rolanddesc.xml">this XML</a>.</p>
   <p>Here's another version of <a href="roland.xml">that XML</a> that we'll use for an example of external documents in transformations.</p>
   <p>I promise we'll work on a <a href="xslttips.html">more complex XML document</a> again, covering modes, using <a href="xslttipsreview.xsl">this XSLT</a> to start.</p>
