--- a/Z656/xquery-class.html
+++ b/Z656/xquery-class.html
@@ -6,7 +6,7 @@ date: 2018-03-22
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-  <p>First, download this <a href="">ZIP file</a>.</p>
+  <p>First, download this <a href="xquerypractice.zip">ZIP file</a>.</p>
   <p>Next, here's a couple of useful tools:</p>
     <ul>
     <li><a href="https://json-csv.com/xml">XML to CSV</a></li>
