--- a/Z656/index.html
+++ b/Z656/index.html
@@ -4,6 +4,7 @@ title: ILS-Z656
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
+	    <li>2018-03-22 » <a href="/Z656/xquery-class.html" title="XQuery In-Class">XQuery Homework</a></li>
 	    <li>2018-03-22 » <a href="/Z656/xquery-hw.html" title="XQuery Homework">XQuery Homework</a></li>
 	    <li>2018-03-01 » <a href="/Z656/XSLT4.html" title="XSLT Class 4">XSLT In-Class Exercises 4</a></li> 
 	    <li>2018-02-22 » <a href="/Z656/XSLT3.html" title="XSLT Class 3">XSLT In-Class Exercises 3</a></li> 
