--- a/Z656/index.html
+++ b/Z656/index.html
@@ -5,7 +5,8 @@ title: ILS-Z656
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
 	    <li>2018-03-29 » <a href="/Z656/final-project-and-xslfo.html" title="Final Project and XSL-FO">Final Project and XSL-FO</a></li>
-	    <li>2018-03-22 » <a href="/Z656/xquery-hw.html" title="XQuery Homework">XQuery Homework</a></li>
+	    <li>2018-03-22 » <a href="/Z656/xquery-class.html" title="XQuery In-Class">XQuery In-Class</a></li>
+ 	    <li>2018-03-22 » <a href="/Z656/xquery-hw.html" title="XQuery Homework">XQuery Homework</a></li>
 	    <li>2018-03-01 » <a href="/Z656/XSLT4.html" title="XSLT Class 4">XSLT In-Class Exercises 4</a></li> 
 	    <li>2018-02-22 » <a href="/Z656/XSLT3.html" title="XSLT Class 3">XSLT In-Class Exercises 3</a></li> 
 	    <li>2018-02-22 » <a href="/Z656/xslt-hw3.html" title="XSLT Homework 3">XSLT Homework 3</a></li> 
