--- a/Z656/final-project-and-xslfo.html
+++ b/Z656/final-project-and-xslfo.html
@@ -7,5 +7,6 @@ date: 2018-03-29
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>First, we'll talk about the Final Project and the <a href="https://iu.instructure.com/courses/1689785/assignments/7810132">proposal</a> due next week.</p>
+  <p><a href="example.xml.fo">example</a></p>
   <p>Next, we'll work on XSL-FO, using a very <a href="neko_cats.xml">familiar and simple XML source</a> and <a href="https://drive.google.com/open?id=1yKc-b3DNoOK5ZCeLwPg9OHG9mKSAWHtk">expected output</a>.</p>
 </div><!-- /.blurb -->
