--- a/Z656/index.html
+++ b/Z656/index.html
@@ -4,6 +4,7 @@ title: ILS-Z656
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
+		<li>2018-04-12 » <a href="/Z656/epub2.html" title="EPUB In-Class 2">EPUB In-Class 2</a></li>
 		<li>2018-04-05 » <a href="/Z656/epub.html" title="EPUB In-Class">EPUB In-Class</a></li>
 		<li>2018-04-05 » <a href="/Z656/epub-hw.html" title="EPUB Homework">EPUB Homework</a></li>
 	    <li>2018-03-29 » <a href="/Z656/final-project-and-xslfo.html" title="Final Project and XSL-FO">Final Project and XSL-FO</a></li>
