--- a/Z656/epub2.html
+++ b/Z656/epub2.html
@@ -11,7 +11,7 @@ date: 2018-04-12
   <li><a href="https://www.youtube.com/watch?v=wsscKcoJN-8">Video 1</a></li>
   <li><a href="https://www.youtube.com/watch?v=WdUOTzu-5hE">Video 2</a></li>
   </ul>
-  <p>Next, we'll look at this <a href="moby_dick.zip">EPUB</a>.</p>
+  <p>Next, we'll look at this <a href="moby-dick.zip">EPUB</a>.</p>
   <p>EPUBCFI scavenger hunt!</p>
   <ul>
   <li>epubcfi(/6/14[xchapter_001]!/4/2/16/2/1:457[I,go])</li>
