--- a/Z603/xpath.html
+++ b/Z603/xpath.html
@@ -15,5 +15,6 @@ date: 2019-03-21
 <li>What's the full version of the corporate name of the repository (the one with the dates at the end)?</li>
 <li>How many boxes are in this finding aid according to the physical description?</li>
 <li>How many boxes are in this finding aid according to the container list?</li>
+  <li>How many items are in this collection?</li>
 </ol>
 </div><!-- /.blurb -->
