--- a/Z603/xpath.html
+++ b/Z603/xpath.html
@@ -17,4 +17,5 @@ date: 2019-03-21
 <li>How many boxes are in this finding aid according to the container list?</li>
   <li>How many items are in this collection?</li>
 </ol>
+  <p>For reference, here's an <a href="https://lzone.de/cheat-sheet/XPath">XPath Cheat Sheet</a>.</p>
 </div><!-- /.blurb -->
