--- a/Z603/xpath.html
+++ b/Z603/xpath.html
@@ -11,7 +11,7 @@ date: 2019-03-21
   <p>Working in pairs, come up with XPath expressions to find answers to the following questions about <a href="http://purl.dlib.indiana.edu/iudl/findingaids/archives/encodedtext/InU-Ar-VAD7971">a complex XML document</a>
 <ol>
 <li>What's this finding aid's unique identifier (Beginning with InU-Ar...)?</li>
-<li>Who processed this finding aid ("Finding aid prepared by...")?</li>
+<li>Who prepared this finding aid ("Finding aid prepared by...")?</li>
 <li>What's the full version of the corporate name of the repository (the one with the dates at the end)?</li>
 <li>How many boxes are in this finding aid according to the physical description?</li>
 <li>How many boxes are in this finding aid according to the container list?</li>
