--- a/Z603/xpath-xquery.html
+++ b/Z603/xpath-xquery.html
@@ -7,7 +7,7 @@ date: 2019-03-28
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>After the activity, download this <a href="neko_cats.zip">ZIP file</a>.</p>
-  <p>Next, open this <a href="xquerypractice.xquery">XQuery file</a>.</p>
+  <p>Next, open this <a href="xquerypractice.xq">XQuery file</a>.</p>
   <p>If you're on a Mac, here's a useful tool:</p>
     <ul>
     <li><a href="https://json-csv.com/xml">XML to CSV</a></li>
