--- a/Z603/xpath-xquery.html
+++ b/Z603/xpath-xquery.html
@@ -31,7 +31,7 @@ date: 2019-03-28
       </ol>
     </li>
   </ol>
-  <h3>Activity</h3>
+  <p>Activity: open this <a href="http://purl.dlib.indiana.edu/iudl/findingaids/archives/encodedtext/InU-Ar-VAA3753">finding aid</a> from the URL.</p>
   <p>After the activity, download this <a href="neko_cats.zip">ZIP file</a>.</p>
   <p>Next, open this <a href="xquerypractice.xq">XQuery file</a>.</p>
   <p>If you're on a Mac, here's a useful tool:</p>
