--- a/Z603/index.html
+++ b/Z603/index.html
@@ -4,6 +4,7 @@ title: ILS-Z603
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
+	    <li>2019-04-04 » <a href="/Z603/ead-xquery.html.html" title="Beginning to use XQuery for EAD">Beginning to use XQuery for EAD</a></li>
 	    <li>2019-03-28 » <a href="/Z603/xpath-xquery.html" title="XPath and Xquery">XPath and XQuery</a></li>
 	    <li>2019-03-21 » <a href="/Z603/xpath.html" title="XPath">XPath</a></li>
 	</ul>
