--- a/Z603/ead-xquery.html
+++ b/Z603/ead-xquery.html
@@ -12,6 +12,8 @@ date: 2019-04-04
       <ul>
         <li>substring-before(something, thing) returns "some"</li>
         <li>substring-after(something, some) returns "thing"</li>
+        <li>contains('1923/1991', '/') returns true</li>
+        <li>contains('1923-1991', '/') returns false</li>
       </ul>
     </li>
   </ol>
