--- a/Z603/ead-xquery-2.html
+++ b/Z603/ead-xquery-2.html
@@ -6,7 +6,7 @@ date: 2019-04-11
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-  <p>Download a bunch of <a href="lilly_ead.zip">EAD</a> and an <a href="EAD_date_exercise_expanded.xq">XQuery</a> if it's not still on your desktop.</p>
+  <p>Download a bunch of <a href="lilly_ead.zip">EAD</a> and an <a href="EAD_date_exercise_2.xq">XQuery</a> if it's not still on your desktop.</p>
   <p>Today we're still using this tool:</p>
     <ul>
     <li><a href="https://json-csv.com/xml">XML to CSV</a></li>
