--- a/Z603/index.html
+++ b/Z603/index.html
@@ -4,7 +4,8 @@ title: ILS-Z603
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
- 	    <li>2019-04-11 » <a href="/Z603/ead-xquery-2.html" title="Continuing to use XQuery for EAD">Continuing to use XQuery for EAD</a></li>
+ 	    <li>2019-04-18 » <a href="/Z603/ead-xquery-3.html" title="EAD Control Access Queries">EAD Control Access Queries</a></li>
+	    <li>2019-04-11 » <a href="/Z603/ead-xquery-2.html" title="Continuing to use XQuery for EAD">Continuing to use XQuery for EAD</a></li>
 	    <li>2019-04-04 » <a href="/Z603/ead-xquery.html" title="Beginning to use XQuery for EAD">Beginning to use XQuery for EAD</a></li>
 	    <li>2019-03-28 » <a href="/Z603/xpath-xquery.html" title="XPath and Xquery">XPath and XQuery</a></li>
 	    <li>2019-03-21 » <a href="/Z603/xpath.html" title="XPath">XPath</a></li>
