--- a/Z603/ead-xquery-3.html
+++ b/Z603/ead-xquery-3.html
@@ -6,7 +6,7 @@ date: 2019-04-18
 
 <h1>{{ page.title }}</h1>
 <div class="blurb">
-  <p>Download a big bunch of <a href="EAD-dump-2019-04-09.zip">EAD</a> and an <a href="EAD_controlaccess.xq">XQuery</a>.</p>
+  <p>Download a big bunch of <a href="https://iu.instructure.com/files/89716121/download?download_frd=1">EAD</a> (located in Canvas as a file for this course) and an <a href="EAD_controlaccess.xq">XQuery</a>.</p>
   <p>Today we're again using this tool:</p>
     <ul>
     <li><a href="https://json-csv.com/xml">XML to CSV</a></li>
