--- a/Z603/ead-xquery-3.html
+++ b/Z603/ead-xquery-3.html
@@ -12,5 +12,5 @@ date: 2019-04-18
     <li><a href="https://json-csv.com/xml">XML to CSV</a></li>
     </ul>
   <p>Today we're querying this collection to learn how control access terms are encoded at Indiana University.</p>
-  <p>Which finding aid contains the most encoded control access terms?</p>
+  <p>Which finding aid contains the most encoded control access terms? <a href="http://purl.dlib.indiana.edu/iudl/findingaids/cshm/ohrc041">Sometimes, control access terms are encoded elsewhere in the finding aid.</a></p>
 </div><!-- /.blurb -->
