--- a/Z603/xquery-consultations.html
+++ b/Z603/xquery-consultations.html
@@ -11,6 +11,6 @@ date: 2019-04-25
     <ul>
     <li><a href="https://json-csv.com/xml">XML to CSV</a></li>
     </ul>
-  <p>Today, you're beginning to work on your own XQueries! I'll consult with each of you to help you plan for how to construct your queries and complete the XQuery assignment.</p>
+  <p>Today, you're beginning to work on your own XQueries! I'll consult with each of you to help you plan how to construct your queries and complete the XQuery assignment.</p>
   
 </div><!-- /.blurb -->
