--- a/Z603/index.html
+++ b/Z603/index.html
@@ -5,9 +5,9 @@ title: ILS-Z603, Spring 2021
 	<h1>{{ page.title }}</h1>
 	<ul class="assignments">
 	    <li>2021-01-21: Class 1
-        <ul>
+        <ul class="assignments">
           <li><a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
-	        <li><a href="/Z656/well-formed-XML.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
+	  <li><a href="/Z656/well-formed-XML.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
         </ul>
       </li>
       <li>2021-01-28: Class 2</li>
@@ -17,4 +17,4 @@ title: ILS-Z603, Spring 2021
       <li>2021-02-25: Class 6</li>
       <li>2021-03-04: Class 7</li>
       <li>2021-03-11: Class 8</li>
-	</ul>
+      </ul>
