--- a/Z603/index.html
+++ b/Z603/index.html
@@ -3,9 +3,9 @@ layout: default
 title: ILS-Z603, Spring 2021
 ---
 	<h1>{{ page.title }}</h1>
-	<ul class="assignments">
+	<ul class="posts">
 	    <li>2021-01-21: Class 1
-        <ul class="assignments">
+        <ul class="posts">
           <li><a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
 	  <li><a href="/Z656/well-formed-XML.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
         </ul>
