--- a/Z603/index.html
+++ b/Z603/index.html
@@ -7,7 +7,7 @@ title: ILS-Z603, Spring 2021
 	    <li>2021-01-21: Class 1
         <ul>
           <li><a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
-	  <li><a href="/Z656/well-formed-XML.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
+	  <li><a href="/Z603/hw1.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
         </ul>
       </li>
       <li>2021-01-28: Class 2</li>
