--- a/Z656/index.html
+++ b/Z656/index.html
@@ -3,7 +3,8 @@ layout: default
 title: ILS-Z656
 ---
 	<h1>{{ page.title }}</h1>
-	<ul class="assignments">
+<p>This course was offered in Spring 2018.</p>
+	<!--<ul class="assignments">
 		<li>2018-04-12 » <a href="/Z656/epub2.html" title="EPUB In-Class 2">EPUB In-Class 2</a></li>
 		<li>2018-04-05 » <a href="/Z656/epub.html" title="EPUB In-Class">EPUB In-Class</a></li>
 		<li>2018-04-05 » <a href="/Z656/epub-hw.html" title="EPUB Homework">EPUB Homework</a></li>
@@ -26,5 +27,5 @@ title: ILS-Z656
 	    <li>2018-01-18 » <a href="/Z656/xmlcss.html" title="Styling XML documents with CSS">Styling XML documents with CSS</a></li>
 	    <li>2018-01-11 » <a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
 	    <li>2018-01-11 » <a href="/Z656/well-formed-XML.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
-	</ul>
+	</ul>-->
 	
