--- a/Z603/hw1.html
+++ b/Z603/hw1.html
@@ -9,7 +9,7 @@ date: 2021-01-21
 <p>Using elements and attributes, create well-formed XML documents to represent and describe the documents and data below:<p>
 <ul>
   <li><a href="http://purl.dlib.indiana.edu/iudl/wright/large/VAC7237-00000013">First page of a book</a> - <a href="/Z656/vac7237-00000013.txt">(plaintext)</a></li>
-  <li><a href="/Z656/French-Cranberry-Chicken-Recipe.jpg">Recipe</a></li>
+  <li><a href="/Z603/recipe.jpg">Recipe</a></li>
 </ul>
 
 <p>Design meaningful tags (elements and attributes) to describe the content of these documents. Try to balance the generality and specificity of what you encode.</p>
