--- a/Z603/hw1.html
+++ b/Z603/hw1.html
@@ -8,7 +8,7 @@ date: 2021-01-21
 <div class="blurb">
 <p>Using elements and attributes, create well-formed XML documents to represent and describe the documents and data below:<p>
 <ul>
-  <li><a href="http://purl.dlib.indiana.edu/iudl/wright/large/VAC7237-00000013">First page of a book</a> - <a href="/Z656/vac7237-00000013.txt">(plaintext)</a></li>
+  <li><a href="http://purl.dlib.indiana.edu/iudl/wright/large/VAC7237-00000013">First page of a book</a> - <a href="/Z603/plaintext.txt">(plaintext)</a></li>
   <li><a href="/Z603/recipe.jpg">Recipe</a></li>
 </ul>
 
