--- a/Z603/hw2.html
+++ b/Z603/hw2.html
@@ -11,5 +11,5 @@ date: 2021-01-28
   <p>You can attach your CSS to an XML document by including a special processing instruction directly below the XML declaration:</p>
 <code>&lt;?xml-stylesheet href="xml-style.css" type="text/css"?&gt;</code>
 <p>Upload the source XML file, CSS stylesheet, and any necessary assets to your GitHub Pages site within its own subdirectory. Please submit a link to that subdirectory via Canvas.</p>
-<img src="http://info.ils.indiana.edu/~jawalsh/teaching/z656/2015s/labs/xml_css/eg/titlePage.jpg" />
+<img src="https://info.sice.indiana.edu/~jawalsh/teaching/z656/2015s/labs/xml_css/eg/titlePage.jpg" />
 </div><!-- /.blurb -->
