--- a/Z603/hw2.html
+++ b/Z603/hw2.html
@@ -7,7 +7,8 @@ date: 2021-01-28
 <h1>{{ page.title }}</h1>
 <div class="blurb">
 <p>Write CSS to style this <a href="https://nhomenda.github.io/Z656/titlepage.xml">XML code</a> to look as close as possible to the printed page shown below. Be sure to use a free custom font that you can download from <a href="https://www.fontsquirrel.com/">Font Squirrel</a> or link from somewhere else.<p>
-<p class="fira">This is an example of a paragraph with a special font that I added in the following manner.</p>
+<p class="fira">This is an example of a paragraph with a special font that I added in the following manner:</p>
+  <img src="/Z603/fira.png" />
   <p>You can attach your CSS to an XML document by including a special processing instruction directly below the XML declaration:</p>
 <code>&lt;?xml-stylesheet href="xml-style.css" type="text/css"?&gt;</code>
 <p>Upload the source XML file, CSS stylesheet, and any necessary assets to your GitHub Pages site within its own subdirectory. Please submit a link to that subdirectory via Canvas.</p>
