--- a/Z603/index.html
+++ b/Z603/index.html
@@ -7,10 +7,15 @@ title: ILS-Z603, Spring 2021
 	    <li>2021-01-21: Class 1
         <ul>
           <li><a href="/Z656/github-pages.html" title="GitHub Pages Code Snippets">GitHub Pages Code Snippets</a></li>
-	  <li><a href="/Z603/hw1.html" title="Creating well-formed XML documents">Creating well-formed XML documents</a></li>
+	  <li><a href="/Z603/hw1.html" title="Creating well-formed XML documents">Homework 1: Creating well-formed XML documents</a></li>
         </ul>
       </li>
-      <li>2021-01-28: Class 2</li>
+      <li>2021-01-28: Class 2
+	<ul>
+	  <li><a href="/Z603/class2.html" title="Class 2 Agenda">Class 2 Agenda</a></li>		
+	  <li><a href="/Z603/hw2.html" title="Styling XML with CSS">Homework 2: Styling XML with CSS</a></li>	
+	</ul>	
+      </li>
       <li>2021-02-04: Class 3</li>
       <li>2021-02-11: Class 4</li>
       <li>2021-02-18: Class 5</li>
