--- a/Z603/class2.html
+++ b/Z603/class2.html
@@ -7,7 +7,7 @@ date: 2021-01-28
 <h1>{{ page.title }}</h1>
 <div class="blurb">
   <p>First, we'll review XML concepts using <a href="/Z603/simple.xml">simple</a> and <a href="http://purl.dlib.indiana.edu/iudl/general/pageturner/mets/VAA2099">complex</a> XML documents.</p>
-  <!--<p>Next, we'll do <a href="/Z603/xmlreview.html">micro research projects on XML standards and schema</a>.</p>
+  <p>Next, we'll do <a href="/Z603/xmlreview.html">micro research projects on XML standards and schema</a>.</p>
   <p>After a break, we'll work in small groups to add CSS to an <a href="/Z603/petrock.html">HTML page</a>.</p>
-  <p>At the end of the class, we'll strategize how to do this week's <a href="/Z603/hw2.html">homework</a>.</p>-->
+  <p>At the end of the class, we'll strategize how to do this week's <a href="/Z603/hw2.html">homework</a>.</p>
 </div><!-- /.blurb -->
