--- a/Z603/petrock.html
+++ b/Z603/petrock.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Indiana Pet Rock Rescue Society</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="rocks.css">
 </head>
 <body>
     <div id="header">
