--- a/Z603/index.html
+++ b/Z603/index.html
@@ -16,7 +16,12 @@ title: ILS-Z603, Spring 2021
 	  <li><a href="/Z603/hw2.html" title="Styling XML with CSS">Homework 2: Styling XML with CSS</a></li>	
 	</ul>	
       </li>
-      <li>2021-02-04: Class 3</li>
+      <li>2021-02-04: Class 3
+	<ul>
+	  <li><a href="/Z603/class3.html" title="Class 3 Agenda">Class 2 Agenda</a></li>		
+	  <li><a href="/Z603/hw3.html" title="XSLT Transformation #1">Homework 3: XSLT Transformation #1</a></li>	
+	</ul>		
+      </li>
       <li>2021-02-11: Class 4</li>
       <li>2021-02-18: Class 5</li>
       <li>2021-02-25: Class 6</li>
