--- a/Z603/index.html
+++ b/Z603/index.html
@@ -22,7 +22,12 @@ title: ILS-Z603, Spring 2021
 	  <li><a href="/Z603/hw3.html" title="XSLT Transformation #1">Homework 3: XSLT Transformation #1</a></li>	
 	</ul>		
       </li>
-      <li>2021-02-11: Class 4</li>
+      <li>2021-02-11: Class 4
+	<ul>
+	  <li><a href="/Z603/class4.html" title="Class 4 Agenda">Class 4 Agenda</a></li>		
+	  <li><a href="/Z603/hw4.html" title="XSLT Transformation #2">Homework 4: XSLT Transformation #2</a></li>	
+	</ul>	
+      </li>
       <li>2021-02-18: Class 5</li>
       <li>2021-02-25: Class 6</li>
       <li>2021-03-04: Class 7</li>
