--- a/Z603/index.html
+++ b/Z603/index.html
@@ -28,7 +28,11 @@ title: ILS-Z603, Spring 2021
 	  <li><a href="/Z603/hw4.html" title="XSLT Transformation #2">Homework 4: XSLT Transformation #2</a></li>	
 	</ul>	
       </li>
-      <li>2021-02-18: Class 5</li>
+      <li>2021-02-18: Class 5
+	<ul>
+	  <li><a href="/Z603/class5.html" title="Class 5 Agenda">Class 5 Agenda</a></li>			
+	</ul>
+       </li>
       <li>2021-02-25: Class 6</li>
       <li>2021-03-04: Class 7</li>
       <li>2021-03-11: Class 8</li>
