--- a/Z603/index.html
+++ b/Z603/index.html
@@ -33,7 +33,12 @@ title: ILS-Z603, Spring 2021
 	  <li><a href="/Z603/class5.html" title="Class 5 Agenda">Class 5 Agenda</a></li>			
 	</ul>
        </li>
-      <li>2021-02-25: Class 6</li>
+      <li>2021-02-25: Class 6
+	<ul>
+	  <li><a href="/Z603/class6.html" title="Class 6 Agenda">Class 6 Agenda</a></li>		
+	  <li><a href="/Z603/hw6.html" title="XQuery a Corpus">Homework 6: XQuery a Corpus</a></li>	
+	</ul>	
+      </li></li>
       <li>2021-03-04: Class 7</li>
       <li>2021-03-11: Class 8</li>
       </ul>
