--- a/Z603/class7.html
+++ b/Z603/class7.html
@@ -8,5 +8,5 @@ date: 2021-03-04
 <div class="blurb">
   <p>First, we'll finish talking about XQuery and discuss your results from <a href="/Z603/class6.html">last week's activity</a>.</p>
   <p>Next, we'll do some exploration with EPUBs. You will need <a href="https://calibre-ebook.com/">Calibre</a> and <a href="https://www.docdataflow.com/ecancrusher/">eCanCrusher</a> on your computer.</p>
-  <p>Here's an in-process EPUB transformation that we can complete together.<p>
+  <p>Here's an in-process EPUB transformation that we can walk through.<p>
 </div><!-- /.blurb -->
