--- a/Z603/index.html
+++ b/Z603/index.html
@@ -38,7 +38,11 @@ title: ILS-Z603, Spring 2021
 	  <li><a href="/Z603/class6.html" title="Class 6 Agenda">Class 6 Agenda</a></li>		
 	  <li><a href="/Z603/hw6.html" title="XQuery a Corpus">Homework 6: XQuery a Corpus</a></li>	
 	</ul>	
-      </li></li>
-      <li>2021-03-04: Class 7</li>
+      </li>
+      <li>2021-03-04: Class 7
+	<ul>
+	  <li><a href="/Z603/class7.html" title="Class 7 Agenda">Class 7 Agenda</a></li>			
+	</ul>
+       </li>
       <li>2021-03-11: Class 8</li>
       </ul>
