--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Nick's Github-hosted website
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Nick!</h1>
-	<p>I'm the Digital Initiatives Librarian at <a href="https://libraries.indiana.edu">Indiana University</a>, and this is a scratchpad for basic website stuff.</p>
+	<p>I'm the Digital Initiatives Librarian at <a href="https://libraries.indiana.edu">Indiana University</a>, and this site organizes technology instruction that I do.</p>
 </div><!-- /.blurb -->
