--- a/Z656/github-pages.html
+++ b/Z656/github-pages.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "GitHub Pages Code Snippets"
-date: 2018-01-11
+date: 2022-01-13
 ---
 
 <h1>{{ page.title }}</h1>
@@ -134,11 +134,11 @@ layout: default
   &lbrace;&lbrace; content &rbrace;&rbrace;
 &lt;/div&gt;</code></pre>
 	
-	<p>Snippet 6: <code>2018-01-10-my-site-launched.md</code></p>
+	<p>Snippet 6: <code>2022-01-13-my-site-launched.md</code></p>
 	<pre class="prettyprint pre-scrollable"><code>---
 layout: post
 title: "NAME, Digital Publishing Expert, launches site"
-date: 2018-01-10
+date: 2022-01-13
 ---
 
 I finally got around to putting this old website together. Neat thing about it - powered by &lbrack;Jekyll&rbrack;&lpar;http://jekyllrb.com&rpar; and I can use Markdown to author my posts. It actually is a lot easier than I thought it was going to be.</code></pre>
@@ -183,6 +183,18 @@ layout: feed
 	&lbrace;&percnt; endfor &percnt;&rbrace;
 
 &lt;/feed&gt;</code></pre>
+	
+<p>Snippet 8: <code>homework/index.html</code></p>
+	<pre class="prettyprint pre-scrollable"><code>---
+layout: default
+title: "Homework"
+date: 2022-01-13
+---
+&lt;h1&gt;{{ page.title }}&lt;/h1&gt;
+&lt;ul class="posts"&gt;
+&lt;li&gt;&lt;a href="homework/hw1"&gt;Homework 1&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+</code></pre>
 </div><!-- /.blurb -->
 
 	
