--- a/Z656/github-pages.html
+++ b/Z656/github-pages.html
@@ -195,6 +195,19 @@ date: 2022-01-13
 &lt;li&gt;&lt;a href="homework/hw1"&gt;Homework 1&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;
 </code></pre>
+
+<p>Snippet 9: <code>homework/hw1/index.html</code></p>
+<pre class="prettyprint pre-scrollable"><code>---
+layout: default
+title: "Homework #1"
+date: 2022-01-13
+---
+&lt;h1&gt;{{ page.title }}&lt;/h1&gt;
+&lt;ul class="posts"&gt;
+&lt;li&gt;&lt;a href="nhomenda_moby_dick.xml"&gt;Moby Dick&lt;/a&gt;&lt;/li&gt;
+&lt;li&gt;&lt;a href="nhomenda_recipe.xml"&gt;Recipe&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
+</code></pre>
 </div><!-- /.blurb -->
 
 	
